--- a/css/custom.css
+++ b/css/custom.css
@@ -10,3 +10,23 @@ footer {
     margin: 60px 0;
     text-align: center;
 }
+
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 18px;
+  line-height: 1.42857143;
+  color: #333;
+  background-color: #fff;
+}
+
+h3 {
+    font-size: 20px;
+}
+
+h2 {
+    font-size: 24px;
+}
+
+h1 {
+    font-size: 26px;
+}
